cluster/30-technitium/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-web
  namespace: technitium
spec:
  ingressClassName: traefik
  rules:
    - host: dns.home.brightcubes.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium-web
                port:
                  number: 5380
